fixed spacing of imgs

--- a/G_Portfolio/style.css
+++ b/G_Portfolio/style.css
@@ -8,10 +8,11 @@ body {
 }
 
 .description {
-  width: 80vw;
+  width: 90vw;
   /* margin: 0 auto; */
-  padding: 16px;
-  border: 1px solid white;
+  padding: 1vw;
+  /* border: 1px solid white; */
+  justify-self: center;
 }
 
 .main {
@@ -80,7 +81,8 @@ p {
   word-wrap: break-word;
   overflow-wrap: break-word;
   white-space: normal;
-  margin: 0;
+  margin: 1vw;
+  text-align: left;
 }
 
 .menu {
@@ -240,7 +242,6 @@ iframe {
   display: flex;
   width: 60vw;
   /* padding: 1vw; */
-  margin: 1vw;
   border-radius: 0 0 20px 0;
   align-self: center;
   justify-content: center;
@@ -254,8 +255,8 @@ iframe {
   /* margin: 1vw; */
   padding: 1vw;
   border-radius: 0 0 20px 0;
-  align-self: center;
-  justify-content: center;
+  /* align-self: center;
+  justify-self: center; */
   object-fit: cover;
   min-width: 300px;
 }
@@ -265,6 +266,8 @@ iframe {
   flex-flow: row;
   max-width: 75vw;
   flex-wrap: wrap;
+  align-self: center;
+  justify-content: center;
 }
 
 .imgs-column {
